to much changes

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,84 +1,36 @@
-# -- HotKeys --
+set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",screen-256color*:Tc"
+
+set -sg escape-time 0
+set -gq allow-passthrough on
+set -g base-index 1
+set -g status-justify centre
+set -g status-position top
+set -g aggressive-resize off
+
 unbind C-b
 set -g prefix M-j
 
-bind r   source-file ~/.config/tmux/tmux.conf \; display "config reloaded!"
-bind '%' split-window -h -c "#{pane_current_path}"
-bind '"' split-window -v -c "#{pane_current_path}"
-bind c   new-window -c "#{pane_current_path}"
-bind j   select-pane -D
-bind k   select-pane -U
-bind l   select-pane -L
-bind h   select-pane -R
-bind -r  Down resize-pane -D 10
-bind -r  Up resize-pane -U 10
-bind -r  Right resize-pane -R 10
-bind -r  Left resize-pane -L 10
+set-window-option -g mode-keys vi
 
-# clear styles
-set -g status-style "fg=default,bg=default,noreverse,nobold,nounderscore"
-set -g window-status-style "fg=default,bg=default,nodim,nobold,nounderscore"
-set -g window-status-current-style "fg=default,bg=default,noreverse,nobold,nounderscore"
+bind r source-file ~/.config/tmux/tmux.conf
 
-if-shell 'uname | grep -qi Darwin' 'set-option -g set-clipboard on' \
-'if-shell "uname -r | grep -qi microsoft" \
-  "bind -T copy-mode-vi y send -X copy-pipe-and-cancel \"win32yank.exe -i --crlf\"" \
-  "bind -T copy-mode-vi y send -X copy-pipe-and-cancel \"xclip -sel clip -i\""
-'
+bind -r ^ last-window
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r h select-pane -L
+bind -r l select-pane -R
 
-set -g status on
-set -g automatic-rename off
-set -g allow-rename off
-set -g mouse on 
-setw -g mode-keys vi
-set -g default-shell ${SHELL}
-set -g default-terminal "screen-256color"
-set -as terminal-features "tmux*:RGB,tmux*:usstyle"
-set -sg escape-time 0
-set -g focus-events on
-set -g exit-unattached off
-set -g base-index 1
-set -g pane-base-index 1
+bind-key -r -T prefix f new-window -n sessionizer "~/.config/scripts/tmux_sessionizer"
+
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi C-q send-keys -X rectangle-toggle
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
+
+set -g status-right '#(git -C "#{pane_current_path}" branch --show-current 2>/dev/null | sed "s/.*/  & /")'
+
 set -g status-interval 5
-set -g status-position top
-set -g status-left-length 50
-set -g status-right-length 50
-set -g status-justify left
 
-# -- status left
-set -g status-left "[#S] 👾 "
-set -g status-left-length 50
-set -g status-right-length 0
-set -g status-right '#(~/.config/scripts/git_current_branch.sh "#{pane_current_path}")'
-
-# -- status right
-set -g window-status-separator ""
-set-window-option -g window-status-current-format "⟨▣ #I:#W⟩"
-set-window-option -g window-status-format "⟨▢ #I:#W⟩"
-
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'lloydbond/tmux-floating-terminal'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-
-# Quick window
-set -g @floating_scratch_term 'M-i'
-set -g @floating_scratch_to_active_win 'M-h'
-set -g @floating_scratch_to_win 'M-l'
-set -g @floating_active_pane_to_scratch 'M-m'
-set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-strategy-nvim 'session'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
-set -g @continuum-save-interval '1'
-
-run '~/.config/tmux/tpm/tpm'
-
-set -g allow-passthrough on                  
-set -ga terminal-overrides ",wezterm:RGB"
-set -gq allow-passthrough on
-set -g visual-activity off                  
-
-# source-file ~/.cache/wal/tmux.conf
+# Rice
+set -g status-style "bg=black,fg=colour245"
+set -g window-status-current-style "bg=black,fg=white,bold"
