--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -8,7 +8,7 @@ bold_italic_font JetBrainsMonoNL Nerd Font Mono Bold Italic
 
 # adjust_line_height -1
 # adjust_column_height 2
-font_size        10
+font_size        10.5
 # The amount the font size is changed by (in pts) when increasing/decreasing
 # the font size in a running terminal.
 # font_size_delta 1
@@ -173,7 +173,7 @@ inactive_tab_background #999
 
 # Clipboard
 map ctrl+shift+c        copy_to_clipboard
-map ctrl+v        paste_from_clipboard
+map ctrl+shift+v        paste_from_clipboard
 map ctrl+shift+s        paste_from_selection
 map shift+insert        paste_from_selection
 map alt+left send_text all \x1b\x62
