--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -11,6 +11,8 @@ set -g aggressive-resize off
 unbind C-b
 set -g prefix M-j
 
+set -g mouse on
+
 set-window-option -g mode-keys vi
 
 bind r source-file ~/.config/tmux/tmux.conf
