--- a/deliver/dotbot-config/linux_hyprland.conf.yaml
+++ b/deliver/dotbot-config/linux_hyprland.conf.yaml
@@ -4,9 +4,14 @@
     relink: true
     force: true
 
-
 - link:
   ~/.zprofile: ../../zprofile/.zprofile
-  ~/.config/deployed:
-    path: ../../config/deployed
-    create: true
+  ~/.config/dunst: ../../config/dunst
+  ~/.config/hypr: ../../config/hypr
+  ~/.config/nix: ../../config/nix
+  ~/.config/wal: ../../config/wal
+  ~/.config/waybar: ../../config/waybar
+  ~/.config/wofi: ../../config/wofi
+  ~/.config/nix-search-tv: ../../config/nix-search-tv
+
+  ~/.config/deployed: ../../config/deployed
