--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,22 +1,6 @@
-# This is an example Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/
+# This is an example Hyprland config file. Refer to the wiki for more information. https://wiki.hyprland.org/Configuring/
 
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
-
-source = ~/.cache/wal/colors-hyprland.conf
-source = ~/.config/hypr/hotkeys.conf
-
-env = XCURSOR_SIZE, 40
-env = HYPRCURSOR_THEME,Bibata-Modern-Ice
-env = HYPRCURSOR_SIZE,24
-env = XCURSOR_THEME,Bibata-Modern-Ice
-env = XCURSOR_SIZE,24
+# Please note not all available settings / options are set here. For a full list, see the wiki
 
 ################
 ### MONITORS ###
@@ -24,7 +8,8 @@ env = XCURSOR_SIZE,24
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # for moonshine need to automate
-monitor=HDMI-A-0,3840x2160@60.00Hz,0x0, 1.9
+# monitor=HDMI-A-0,3840x2160@60.00Hz,0x0, 1.9
+monitor=LG Electronics LG HDR 4K 0x00013533,3840x2160@60.00Hz,0x0, 1.9
 # monitor=HDMI-A-0,3840x2160@60.00Hz,0x0, 2
 
 ###################
@@ -38,34 +23,31 @@ $terminal = kitty
 $fileManager = dolphin
 $menu = pkill wofi || wofi --show drun
 
+source = ~/.cache/wal/colors-hyprland.conf
+source = ~/.config/hypr/hotkeys.conf
+source = ~/.config/hypr/startup.conf
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-exec-once = hyprctl setcursor "$XCURSOR_THEME" "$XCURSOR_SIZE"
-exec-once = swww-daemon
-exec-once = wal -R
-exec-once = dunst
-exec-once = waybar
-exec-once = $mainMod, i, exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/waybar/live_reload.sh"
-exec-once = if [ "$TMUX" = "" ]; then tmux new -s local && tmux tmux-detach; fi
+env = XCURSOR_SIZE, 40
+env = HYPRCURSOR_THEME,Bibata-Modern-Ice
+env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,Bibata-Modern-Ice
+env = XCURSOR_SIZE,24
 
 ###################
 ### PERMISSIONS ###
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Permissions/
-# Please note permission changes here require a Hyprland restart and are not applied on-the-fly
-# for security reasons
+
+permission = .*/firefox, screencopy, allow
+permission = .*/zoom, screencopy, allow
+permission = .*/zoom-us, screencopy, allow
 
 # ecosystem {
 #   enforce_permissions = 1
@@ -94,7 +76,7 @@ general {
   col.inactive_border = rgba(595959aa)
 
   # Set to true enable resizing windows by clicking and dragging on borders and gaps
-  resize_on_border = false
+  resize_on_border = true
 
   # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
   allow_tearing = false
@@ -169,12 +151,16 @@ animations {
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
 # uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
 # workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+# windowrule = bordersize 0, floating:0, onworkspace:w[1]
+# windowrule = rounding 0, floating:0, onworkspace:w[2]
 # windowrule = bordersize 0, floating:0, onworkspace:f[1]
 # windowrule = rounding 0, floating:0, onworkspace:f[1]
+layerrule = dimaround, wofi
+# workspace = 1, floating:1
+
+# workspace = 1, gapsin:0.1w, gapsout:0.1w
+windowrule = float, workspace:1
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -231,90 +217,6 @@ device {
   name = epic-mouse-v1
   sensitivity = -0.5
 }
-
-###################
-### KEYBINDINGS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
-bind = $mainMod, i, exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/scripts/set_wallpaper"
-
-# I can also use -,+ hotkeys as well
-bind = $mainMod, bracketLeft, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bind = $mainMod, bracketRight, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bind = $mainMod, backslash, exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/scripts/connect-xm6"
-bind = $mainMod, slash, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bind = $mainMod, shift+s, exec, grim -g "$(slurp)" - | wl-copy
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, D, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, J, togglesplit, # dwindle
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, L, movefocus, r
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, J, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-
-
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
