--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -17,6 +17,8 @@ set-window-option -g mode-keys vi
 
 bind r source-file ~/.config/tmux/tmux.conf
 
+bind c new-window -c "#{pane_current_path}"
+
 bind -r ^ last-window
 bind -r j select-pane -D
 bind -r k select-pane -U
