--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -7,46 +7,48 @@
     "margin": "9px 18px 0 18px",
     "modules-left": [
       "custom/logo",
-      "custom/weather",
-      "hyprland/window"
+      // "hyprland/window",
+      "hyprland/submap",
     ],
     "modules-center": [
-      "hyprland/workspaces"
+      "hyprland/workspaces",
     ],
     "modules-right": [
-      // "custom/connect_xm6",
-      // "bluetooth",
-      "group/system",
+      "wlr/taskbar",
       "group/audio",
       "tray",
       "clock",
+      "hyprland/language",
       "group/power"
     ],
+
+    // "wlr/taskbar": {
+    //   "format": "{icon}",
+    //   "current-only": true,
+    //   "all-outputs": true,
+    //   "active-first": true,
+    //   "tooltip-format": "{name}",
+    //   "on-click": "activate",
+    //   "on-click-middle": "close",
+    // },
+
+    //
+    // left
+    //
     "custom/logo": {
       "format": "<span font='20'>{icon}</span>",
       "format-icons": "󰯉",
-      "on-click": "pkill rofi; ~/.config/scripts/rofi_start"
+      "on-click": "pkill wofi; ~/.config/scripts/wofi_start"
     },
-    // switch to https://open-meteo.com/en/docs?hourly=temperature_2m,rain,wind_speed_10m,wind_speed_80m,wind_speed_120m,wind_speed_180m,wind_direction_10m,wind_direction_80m,wind_direction_120m,wind_direction_180m,wind_gusts_10m,temperature_80m,temperature_120m,temperature_180m,showers,precipitation_probability,precipitation,apparent_temperature,dew_point_2m,relative_humidity_2m&forecast_days=1
-    "custom/weather": {
-      "tooltip": true,
-      "format": "{}",
-      "interval": 30,
-      "exec": "~/.config/waybar/scripts/waybar-wttr.py",
-      "on-click": "kitty weather",
-      "return-type": "json"
+
+    "hyprland/submap": {
+      "tooltip": false,
+      "on-click": "hyprctl dispatch submap reset",
     },
-    "custom/connect_xm6": {
-      "format": "  ",
-      "on-click": "~/.config/scripts/connect-xm6"
-    },
-    "hyprland/window": {
-      "rewrite": {
-        "(.*) - Firefox": "$1",
-        "(.*) - kitty": "[$1]"
-      },
-      "separate-outputs": true
-    },
+
+    //
+    // center
+    //
 
     "hyprland/workspaces": {
       "active-only": false,
@@ -57,6 +59,93 @@
         "HDMI-A-1": [1, 2, 3, 4]
       }
     },
+
+    //
+    // right
+    //
+
+    "group/audio": {
+      "orientation": "horizontal",
+      "modules": [
+        "pulseaudio"
+        // "pulseaudio#microphone"
+      ]
+    },
+
+    "wlr/taskbar": {
+      "format": "{icon}",
+      "all-outputs": false,
+      "active-first": true,
+      "tooltip-format": "{name}",
+      "on-click": "activate",
+      "on-click-middle": "close"
+    },
+
+    "tray": {
+      "icon-size": 20,
+      "spacing": 7,
+      "icons": {
+        "blueman": "bluetooth",
+        "TelegramDesktop": "$HOME/.local/share/icons/hicolor/16x16/apps/telegram.png"
+      },
+    },
+
+    "clock": {
+      "format": "{:%a %d %b %I:%M %p}",
+      "format-alt": "{:%I:%M %p}",
+      "tooltip": "true",
+      "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
+    },
+
+    "hyprland/language": {
+      "format": "{} ",
+      "on-click": "hyprctl switchxkblayout apple-inc.-magic-keyboard next",
+      "format-ru": "RU",
+      "format-en": "EN",
+      "justify": "center",
+    },
+
+    "group/power": {
+      "orientation": "horizontal",
+      "modules": ["custom/lock_screen", "custom/power_btn"]
+    },
+
+    "custom/powermenu": {
+      "on-click": "~/.config/wofi/scripts/wofipowermenu.py",
+      "format": "",
+      "tooltip": false
+    },
+
+    "custom/lock_screen": {
+      "format": "",
+      "on-click": "sh -c '(sleep 0.5s; swaylock)' & disown",
+      "tooltip": false
+    },
+
+    // TODO: switch to https://open-meteo.com/en/docs?hourly=temperature_2m,rain,wind_speed_10m,wind_speed_80m,wind_speed_120m,wind_speed_180m,wind_direction_10m,wind_direction_80m,wind_direction_120m,wind_direction_180m,wind_gusts_10m,temperature_80m,temperature_120m,temperature_180m,showers,precipitation_probability,precipitation,apparent_temperature,dew_point_2m,relative_humidity_2m&forecast_days=1
+    // "custom/weather": {
+    //   "tooltip": true,
+    //   "format": "{}",
+    //   "interval": 30,
+    //   "exec": "~/.config/waybar/scripts/waybar-wttr.py",
+    //   "on-click": "kitty weather",
+    //   "return-type": "json"
+    // },
+
+    // "custom/connect_xm6": {
+    //   "format": "  ",
+    //   "on-click": "~/.config/scripts/connect-xm6"
+    // },
+
+    // "hyprland/language": {
+    //   "format": " {short}",
+    //   "format-us": "US",
+    //   "format-ru": "RU",
+    //   "keyboard-name": "at-translated-set-2-keyboard", // set yours
+    //   "on-click": "hyprctl switchxkblayout at-translated-set-2-keyboard next",
+    //   "min-length": 2
+    // },
+
       "bluetooth": {
         "format": " {status}",
         "format-disabled": "",
@@ -146,34 +235,6 @@
       "scroll-step": 5
     },
 
-    "tray": {
-      "icon-size": 20,
-      "spacing": 7,
-          "icons": {
-        "blueman": "bluetooth",
-        "TelegramDesktop": "$HOME/.local/share/icons/hicolor/16x16/apps/telegram.png"
-    }
-    },
-
-    "clock": {
-      "format": "{:%a %d %b %I:%M %p}",
-      "format-alt": "{:%I:%M %p}",
-      "tooltip": "true",
-      "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
-    },
-
-    "custom/lock_screen": {
-      "format": "",
-      "on-click": "sh -c '(sleep 0.5s; swaylock)' & disown",
-      "tooltip": false
-    },
-
-    "custom/power_btn": {
-      "format": "",
-      "on-click": "sh -c '(sleep 0.5s; wlogout --protocol layer-shell)' & disown",
-      "tooltip": false
-    },
-
     "group/system": {
       "orientation": "horizontal",
       "drawer": {
@@ -183,18 +244,5 @@
       },
       "modules": ["temperature", "disk", "memory", "cpu"]
     },
-
-    "group/audio": {
-      "orientation": "horizontal",
-      "modules": [
-        "pulseaudio"
-        // "pulseaudio#microphone"
-      ]
-    },
-
-    "group/power": {
-      "orientation": "horizontal",
-      "modules": ["custom/lock_screen", "custom/power_btn"]
-    }
   }
 ]
