update zsh & bring back tmux window switch & hyprland and waybar

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -20,7 +20,7 @@ monitor=LG Electronics LG HDR 4K 0x00013533,3840x2160@60.00Hz,0x0, 1.9
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = pkill wofi || wofi --show drun
 
 source = ~/.cache/wal/colors-hyprland.conf
@@ -33,11 +33,15 @@ source = ~/.config/hypr/startup.conf
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE, 40
-env = HYPRCURSOR_THEME,Bibata-Modern-Ice
-env = HYPRCURSOR_SIZE,24
-env = XCURSOR_THEME,Bibata-Modern-Ice
-env = XCURSOR_SIZE,24
+# env = HYPRCURSOR_THEME,Bibata-Modern-Ice
+# env = HYPRCURSOR_SIZE,24
+# env = XCURSOR_THEME,Bibata-Modern-Ice
+# env = XCURSOR_SIZE,40
+# env = GDK_SCALE,2
+# env = GDK_BACKEND,wayland,x11,*
+# env = QT_QPA_PLATFORM,wayland;xcb
+# env = QT_AUTO_SCREEN_SCALE_FACTOR,1
+# env = QT_QPA_PLATFORM,wayland;xcb
 
 ###################
 ### PERMISSIONS ###
@@ -90,7 +94,7 @@ decoration {
   rounding_power = 2
 
   # Change transparency of focused and unfocused windows
-  active_opacity = 0.95
+  active_opacity = 0.90
   inactive_opacity = 0.85
 
   dim_inactive = false
@@ -159,9 +163,6 @@ animations {
 layerrule = dimaround, wofi
 # workspace = 1, floating:1
 
-# workspace = 1, gapsin:0.1w, gapsout:0.1w
-windowrule = float, workspace:1
-
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
   pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
@@ -182,7 +183,6 @@ misc {
 
   mouse_move_enables_dpms = true
 }
-
 
 #############
 ### INPUT ###
