--- a/config/hypr/startup.conf
+++ b/config/hypr/startup.conf
@@ -1,21 +1,56 @@
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# Programs
 exec-once = hyprctl setcursor "$XCURSOR_THEME" "$XCURSOR_SIZE"
-exec-once = swww-daemon
-exec-once = wal -R
-exec-once = dunst
-exec-once = waybar
-exec-once = $mainMod, i, exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/waybar/live_reload.sh"
+exec-once = pkill -x swww-daemon; swww-daemon & disown
+
+exec-once = /run/current-system/sw/bin/zsh -lc "$HOME/.config/waybar/live_reload.sh"
+exec-once = /run/current-system/sw/bin/zsh -lc "$HOME/.config/scripts/connect-xm6"
+exec-once = /run/current-system/sw/bin/zsh -lc "$HOME/.config/scripts/main_pc/mount_drives"
+
 exec-once = if [ "$TMUX" = "" ]; then tmux new -s local && tmux tmux-detach; fi
 
-# Windows
-exec-once = [workspace 1 silent] firefox
-exec-once = [workspace 1 silent] kitty -e tmux attach-session -t local
-# exec-once = [workspace 9 silent] kitty -e btop
+windowrulev2 = float,        workspace:1
+windowrulev2 = size 70% 85%, workspace:1
+windowrulev2 = center,       workspace:1
 
-# exec-once = [workspace 1 silent match-name] slack
-# exec-once = [workspace 1 silent match-name] /opt/google/chrome/google-chrome --profile-directory=Default --app-
-# exec-once = [workspace 2 silent match-class] /opt/google/chrome/google-chrome
-# exec-once = [workspace 3 silent match-class] code
+windowrulev2 = float,        workspace:2
+windowrulev2 = size 70% 85%, workspace:2
+windowrulev2 = center,       workspace:2
+
+windowrulev2 = workspace 1, title:^(FirefoxDefaultProfile)$
+windowrulev2 = workspace 10, title:^(FirefoxMediaProfile)$
+
+windowrulev2 = tile, workspace:3
+windowrulev2 = tile, workspace:4
+windowrulev2 = tile, workspace:5
+windowrulev2 = tile, workspace:6
+windowrulev2 = tile, workspace:7
+windowrulev2 = tile, workspace:8, force
+windowrulev2 = tile, workspace:9
+windowrulev2 = tile, workspace:10
+
+# windowrulev2 = workspace 1, class:^(firefox)$, title:.* - default
+# windowrulev2 = workspace 0, class:^(firefox)$, title:.* - media
+
+exec-once = [workspace 1 silent] firefox -P default --name "FirefoxDefaultProfile"
+exec-once = [workspace 2 silent] kitty -e tmux attach-session -t local
+
+exec-once = [workspace 8 silent] kitty -e btop
+exec-once = [workspace 8 silent] pavucontrol
+exec-once = [workspace 8 silent] blueman-manager
+
+exec-once = [workspace 10 silent] firefox -P media --name "FirefoxMediaProfile"
+
+
+# Firefox floating windows
+windowrulev2 = float, initialClass:^(firefox)$, initialTitle:^(Picture-in-Picture|Library|Downloads|Open File|Save File)$
+windowrulev2 = float, class:^(firefox)$, title:^(.*Sign in|Log in|Continue with Google).*
+
+windowrulev2 = float, class:^(firefox)$, windowtype:^(dialog|popup)$
+windowrulev2 = center, class:^(firefox)$, windowtype:^(dialog|popup)$
+
+# Steam dialogs
+windowrulev2 = float, class:^(steam)$, windowtype:^(dialog|popup)$
+windowrulev2 = center, class:^(steam)$, windowtype:^(dialog|popup)$
+windowrulev2 = float, class:^(steam)$, title:^(.*Sign in|Friends List|Chat|Settings|Screenshot Uploader).*
