--- a/config/hypr/hotkeys.conf
+++ b/config/hypr/hotkeys.conf
@@ -3,7 +3,6 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 
-
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
@@ -19,7 +18,37 @@ bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
+# submap = resize
+# binde = , right, resizeactive, 20 0
+# binde = , left, resizeactive, -20 0
+# binde = , up, resizeactive, 0 -20
+# binde = , down, resizeactive, 0 20
+#
+# # Switch to a submap called `resize`.
+# bind = ALT, R, submap, resize
+
+
+#
+# Start a submap called "resize".
+#
+bind = $mainMod, R, submap, R
+submap = R
+# Set repeatable binds for resizing the active window.
+binde = , l, resizeactive, 20 0
+binde = , h, resizeactive, -20 0
+binde = , k, resizeactive, 0 -20
+binde = , j, resizeactive, 0 20
+# Use `reset` to go back to the global submap
+bind = , escape, submap, reset
+bind = CTRL, bracketleft, submap, reset
+bind = , q, submap, reset
+submap = reset
+
+#
+# end submap defenetion for "resize"
+#
+
+
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -31,7 +60,6 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -43,9 +71,8 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, A, togglespecialworkspace, magic
+bind = $mainMod SHIFT, A, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -55,22 +82,21 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
-# bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-# bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-# bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-# bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-# bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-# bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-
 bind = $mainMod, i,            exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/scripts/set_wallpaper"
-# Connect devises
 bind = $mainMod, backslash,    exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/scripts/connect-xm6"
 
-# Screenshots and screen recording
-# bind = $mainMod+shift, s,      exec, grim -g "$(slurp)" - | wl-copy
+bind = $mainMod, S, exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/scripts/screenshot_slurp"
 
 # Volume
 bind = $mainMod, slash,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = $mainMod, bracketLeft,  exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind = $mainMod, bracketRight, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+
+# TODO: consider
+# # cycle through windows on the current workspace
+# bind = $mod, TAB, cyclenext
+# bind = $mod SHIFT, TAB, cycleprev
+# bind = $mod, F, focusfloating # jump focus between tiled layer and floating layer
+#
+#
+# bind = $mod, R, bringactivetotop# raise the focused floating window above others
