--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -17,13 +17,19 @@ set-window-option -g mode-keys vi
 
 bind r source-file ~/.config/tmux/tmux.conf
 
+# Splits in the same directory
 bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 bind -r ^ last-window
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r h select-pane -L
-bind -r l select-pane -R
+
+# bind -n C-h select-pane -L
+# bind -n C-j select-pane -D
+# bind -n C-k select-pane -U
+# bind -n C-l select-pane -R
+
+source-file ~/.config/tmux/smart_pane_switching.conf
 
 bind-key -r -T prefix f new-window -n sessionizer "~/.config/scripts/tmux_sessionizer"
 
