waybar polishing & scripts

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ monitor=LG Electronics LG HDR 4K 0x00013533,3840x2160@60.00Hz,0x0, 1.9
 # Set programs that you use
 $terminal = kitty
 $fileManager = nautilus
-$menu = pkill wofi || wofi --show drun
+$menu = pkill wofi || wofi -Id --show drun --no-actions
 
 source = ~/.cache/wal/colors-hyprland.conf
 source = ~/.config/hypr/hotkeys.conf
