--- a/config/hypr/hotkeys.conf
+++ b/config/hypr/hotkeys.conf
@@ -5,11 +5,11 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+# bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
@@ -91,6 +91,7 @@ bind = $mainMod, S, exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/scr
 bind = $mainMod, slash,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = $mainMod, bracketLeft,  exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind = $mainMod, bracketRight, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bind = $mainMod, M,            exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # TODO: consider
 # # cycle through windows on the current workspace
