lots of things changing, no point to explain

--- a/config/hypr/hotkeys.conf
+++ b/config/hypr/hotkeys.conf
@@ -93,6 +93,8 @@ bind = $mainMod, bracketLeft,  exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bind = $mainMod, bracketRight, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bind = $mainMod, M,            exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
+bind = SUPER, F, fullscreen
+
 # TODO: consider
 # # cycle through windows on the current workspace
 # bind = $mod, TAB, cyclenext
