--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -25,6 +25,7 @@ $menu = pkill wofi || wofi -Id --show drun --no-actions
 
 source = ~/.cache/wal/colors-hyprland.conf
 source = ~/.config/hypr/hotkeys.conf
+source = ~/.config/hypr/windowrules.conf
 source = ~/.config/hypr/startup.conf
 
 #############################
