--- a/config/hypr/hotkeys.conf
+++ b/config/hypr/hotkeys.conf
@@ -95,11 +95,14 @@ bind = $mainMod, M,            exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggl
 
 bind = SUPER, F, fullscreen
 
-# TODO: consider
-# # cycle through windows on the current workspace
-# bind = $mod, TAB, cyclenext
-# bind = $mod SHIFT, TAB, cycleprev
-# bind = $mod, F, focusfloating # jump focus between tiled layer and floating layer
+# TODO: consider cycle through windows on the current workspace
+bind = $mainMod, TAB, cyclenext
+bind = $mainMod SHIFT, TAB, cycleprev
+# bind = $mainMod, F, focusfloating # jump focus between tiled layer and floating layer
 #
 #
 # bind = $mod, R, bringactivetotop# raise the focused floating window above others
+
+
+# bind = ALT, Tab, cyclenext,
+# bind = ALT, Tab, bringactivetotop,
