montors config & zprofile

--- a/config/hypr/hotkeys.conf
+++ b/config/hypr/hotkeys.conf
@@ -96,8 +96,8 @@ bind = $mainMod, M,            exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggl
 bind = SUPER, F, fullscreen
 
 # TODO: consider cycle through windows on the current workspace
-bind = $mainMod, TAB, cyclenext
-bind = $mainMod SHIFT, TAB, cycleprev
+# bind = $mainMod, TAB, cyclenext
+# bind = $mainMod SHIFT, TAB, cycleprev
 # bind = $mainMod, F, focusfloating # jump focus between tiled layer and floating layer
 #
 #
