--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -2,16 +2,6 @@
 
 # Please note not all available settings / options are set here. For a full list, see the wiki
 
-################
-### MONITORS ###
-################
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
-# for moonshine need to automate
-# monitor=HDMI-A-0,3840x2160@60.00Hz,0x0, 1.9
-monitor=LG Electronics LG HDR 4K 0x00013533,3840x2160@60.00Hz,0x0, 1.9
-# monitor=HDMI-A-0,3840x2160@60.00Hz,0x0, 2
-
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -27,6 +17,7 @@ source = ~/.cache/wal/colors-hyprland.conf
 source = ~/.config/hypr/hotkeys.conf
 source = ~/.config/hypr/windowrules.conf
 source = ~/.config/hypr/startup.conf
+source = ~/.config/hypr/monitors.conf
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -204,11 +195,6 @@ input {
   touchpad {
     natural_scroll = false
   }
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-  workspace_swipe = false
 }
 
 # Example per-device config
