--- a/config/hypr/hotkeys.conf
+++ b/config/hypr/hotkeys.conf
@@ -85,7 +85,12 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = $mainMod, i,            exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/scripts/set_wallpaper"
 bind = $mainMod, backslash,    exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/scripts/connect-xm6"
 
-bind = $mainMod, S, exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/scripts/screenshot_slurp"
+# bind = $mainMod, S, exec, /run/current-system/sw/bin/bash -lc "$HOME/.config/scripts/screenshot_slurp"
+bind = $mainMod, S, exec, grimblast copysave area $HOME"/screen-test.png";
+# binde = , f, exec, grimblast copysave screen $HOME"/screenshots/full/"$(date +'%F-%T.png'); hyprctl dispatch submap reset
+# binde = , s, exec, grimblast copysave area $HOME"/screenshots/area/"$(date +'%F-%T.png'); hyprctl dispatch submap reset
+# binde = , a, exec, grimblast copysave active $HOME"/screenshots/active/"$(date +'%F-%T.png'); hyprctl dispatch submap reset
+
 
 # Volume
 bind = $mainMod, slash,        exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
