--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -8,8 +8,9 @@
 # exec-once = hyprctl output create headless HEADLESS-1
 # monitor=HEADLESS-1, 3200x2400@120, -1920x0, 1.5
 
-# Home Office: E-ink & LG
-monitor=HDMI-A-1, 3200x2400@37.0Hz,0x0,2
+# TV
+# monitor=HDMI-A-1, 4096x2160@59.94Hz,0x0, auto
 
-monitor=DP-1, 3840x2160@60.00Hz,1600x-1000, 1.6, transform, 1
-monitor:DP-1, blur:false,shadow:false,animations:false,opacity:false
+# Home Office: E-ink & LG
+monitor=HDMI-A-1, 3200x2400@37.00Hz,0x0, 2
+monitor=DP-1,     3840x2160@60.00Hz,1600x-800, 1.6, transform, 1
