--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -14,3 +14,4 @@
 # Home Office: E-ink & LG
 monitor=HDMI-A-1, 3200x2400@37.00Hz,0x0, 2
 monitor=DP-1,     3840x2160@60.00Hz,1600x-800, 1.6, transform, 1
+# monitor=DP-1,     3840x2160@60.00Hz,1600x-800, 1.6
