--- a/config/hypr/windowrules.conf
+++ b/config/hypr/windowrules.conf
@@ -1,14 +1,16 @@
-windowrulev2 = float,        workspace:1
-windowrulev2 = size 70% 85%, workspace:1
-windowrulev2 = center,       workspace:1
+# windowrulev2 = float,        workspace:1
+# windowrulev2 = size 70% 85%, workspace:1
+# windowrulev2 = center,       workspace:1
+#
+# windowrulev2 = float,        workspace:2
+# windowrulev2 = size 70% 85%, workspace:2
+# windowrulev2 = center,       workspace:2
 
-windowrulev2 = float,        workspace:2
-windowrulev2 = size 70% 85%, workspace:2
-windowrulev2 = center,       workspace:2
+# windowrulev2 = workspace 1, title:^(FirefoxDefaultProfile)$
+# windowrulev2 = workspace 10, title:^(FirefoxMediaProfile)$
 
-windowrulev2 = workspace 1, title:^(FirefoxDefaultProfile)$
-windowrulev2 = workspace 10, title:^(FirefoxMediaProfile)$
-
+windowrulev2 = tile, workspace:1
+windowrulev2 = tile, workspace:2
 windowrulev2 = tile, workspace:3
 windowrulev2 = tile, workspace:4
 windowrulev2 = tile, workspace:5
