--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -25,15 +25,10 @@ source = ~/.config/hypr/monitors.conf
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-# env = HYPRCURSOR_THEME,Bibata-Modern-Ice
-# env = HYPRCURSOR_SIZE,24
-# env = XCURSOR_THEME,Bibata-Modern-Ice
-# env = XCURSOR_SIZE,40
-# env = GDK_SCALE,2
-# env = GDK_BACKEND,wayland,x11,*
-# env = QT_QPA_PLATFORM,wayland;xcb
-# env = QT_AUTO_SCREEN_SCALE_FACTOR,1
-# env = QT_QPA_PLATFORM,wayland;xcb
+env = LIBVA_DRIVER_NAME,nvidia
+env = NVD_BACKEND,direct
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 ###################
 ### PERMISSIONS ###
