split configuration to be monitor specific

--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,5 +1,39 @@
 [
   {
+    "name": "eink",
+    "output": ["HDMI-A-1"],
+    // "height": 20,
+    "spacing": 5,
+    "layer": "top",
+    "position": "top",
+    "margin": "9px 18px 0 18px",
+    "modules-left": [
+      "custom/logo",
+      "custom/weather",
+      // "hyprland/workspaces#app_tray",
+      "hyprland/submap"
+    ],
+    "modules-center": [
+      "hyprland/workspaces#main"
+    ],
+    "modules-right": [
+      "tray",
+      "temperature",
+      "group/audio",
+      "custom/mic_used_by_app",
+      "battery",
+      "hyprland/language",
+      "custom/date_neuro",
+      "custom/date_month",
+      "custom/date_time",
+    ],
+    "include": [
+      "~/.config/waybar/modules.jsonc"
+    ]
+  },
+  {
+    "name": "big",
+    "output": ["DP-1"],
     "height": 38,
     "spacing": 12,
     "layer": "top",
@@ -24,251 +58,9 @@
       "custom/date_neuro",
       "custom/date_month",
       "custom/date_time",
-      "custom/lock_screen"
     ],
-
-    //
-    // left
-    //
-    "custom/logo": {
-      "format": "<span font='20'>{icon}</span>",
-      "format-icons": "󰯉",
-      "on-click": "pkill wofi; ~/.config/scripts/wofi_start"
-    },
-
-    "hyprland/submap": {
-      "tooltip": false,
-      "on-click": "hyprctl dispatch submap reset"
-    },
-
-    //
-    // center
-    //
-
-    "hyprland/workspaces#main": {
-      "disable-scroll": false,
-      "on-scroll-up": "hyprctl dispatch workspace -1",
-      "on-scroll-down": "hyprctl dispatch workspace +1",
-      "active-only": false,
-      "all-outputs": false,
-      "format": "{icon}",
-      "persistent-workspaces": {
-        "HDMI-A-1": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-      },
-      "current": "",
-      "default": "󰧞",
-      "format-icons": {
-        "active": "",
-        "default": "󰧞",
-        "urgent": "",
-        "1": "1",
-        "2": "2",
-        "8": "8",
-        "9": "9",
-        "10": "0"
-      }
-    },
-
-    // displays active apps for given workspace
-    "hyprland/workspaces#app_tray": {
-      "all-outputs": true,
-      "active-only": true,
-      "active-first": true,
-      "format": "{windows}",
-      "workspace-taskbar": {
-        "reverse-direction": true,
-        "tooltip": false,
-        "icon-size": 20,
-        "enable": true,
-        "format": "{icon}",
-        "format-window-separator": "n",
-        "icon-theme": ["Papirus"]
-      }
-    },
-
-    // "wireplumber#mic": {
-    //   "node-type": "Audio/Source",
-    //   "format": "ON AIR",
-    //   "format-muted": "",
-    //   "tooltip": true,
-    //   "on-click": "wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle",
-    //   "states": {
-    //     "muted": {
-    //       "show": false
-    //     }
-    //   }
-    // },
-
-    "custom/mic_used_by_app": {
-      "interval": 1,
-      "exec": "~/.config/scripts/is_mic_used",
-      "on-click": "wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle",
-      "tooltip": false
-    },
-
-
-    //
-    // right
-    //
-
-    "group/audio": {
-      "orientation": "horizontal",
-      "modules": [
-        "pulseaudio",
-      ]
-    },
-
-    "tray": {
-      "icon-size": 20,
-      "spacing": 7,
-      "icon-theme": ["Papirus"]
-    },
-
-    "clock": {
-      "format": "{:%a %d %b %I:%M %p}",
-      "format-alt": "{:%I:%M %p}",
-      "tooltip": "true",
-      "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
-    },
-
-    "custom/date_neuro": {
-      "exec": "~/.config/scripts/date-time neuro",
-      "interval": 60
-    },
-
-    "custom/date_month": {
-      "exec": "~/.config/scripts/date-time month",
-      "interval": 60
-    },
-    "custom/date_time": {
-      "exec": "~/.config/scripts/date-time time",
-      "interval": 60
-    },
-
-    "hyprland/language": {
-      "on-click": "hyprctl switchxkblayout apple-inc.-magic-keyboard next",
-      "format-ru": "ru",
-      "format-en": "en",
-      "justify": "center"
-    },
-
-    "group/power": {
-      "orientation": "horizontal",
-      "modules": ["custom/lock_screen", "custom/power_btn"]
-    },
-
-    "custom/powermenu": {
-      "on-click": "~/.config/wofi/scripts/wofipowermenu.py",
-      "format": "",
-      "tooltip": false
-    },
-
-    "custom/lock_screen": {
-      "format-icons": "",
-      "format": "<span font='16'>{icon}</span>",
-      // "on-click": "sh -c '(sleep 0.5s; swaylock)' & disown",
-      "tooltip": false
-    },
-
-    "custom/weather": {
-      "exec": "~/.config/scripts/weathers/weather2 waybar",
-      "return-type": "json",
-      "interval": 400,
-      "format": "{text}",
-      "tooltip": true,
-      "markup": "pango",
-      "signal": 5,
-       "on-click": "pkill -RTMIN+5 waybar"
-    },
-
-    "bluetooth": {
-      "format": " {status}",
-      "format-disabled": "",
-      "format-connected": " {num_connections} connected",
-      "tooltip-format": "{controller_alias}\t{controller_address}",
-      "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
-      "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}"
-    },
-
-    "disk": {
-      "interval": 60,
-      "format": " {percentage_used}%",
-      "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
-    },
-
-    "memory": {
-      "format": "󰍛 {used} GiB",
-      "format-alt": "󰍛 {percentage}%",
-      "interval": 5,
-      "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
-    },
-
-    "cpu": {
-      "format": "󰻠 {usage}%",
-      "format-alt": "󰻠 {avg_frequency} GHz",
-      "interval": 1,
-      "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
-    },
-
-    "temperature": {
-      "thermal-zone": 1,
-      "format": " {temperatureC}°C",
-      "critical-threshold": 70,
-      "format-critical": " {temperatureC}°C",
-      "on-click": "kitty --start-as=fullscreen --title btop sh -c 'btop'"
-    },
-
-    "backlight": {
-      "device": "intel_backlight",
-      "format": "{icon} {percent}%",
-      "format-icons": ["", "", ""],
-      "on-scroll-up": "brightnessctl set 1%+",
-      "on-scroll-down": "brightnessctl set 1%-",
-      "min-length": 6
-    },
-
-    "battery": {
-      "states": {
-        "good": 95,
-        "warning": 30,
-        "critical": 20
-      },
-      "format": "{icon} {capacity}%",
-      "format-charging": " {capacity}%",
-      "format-plugged": " {capacity}%",
-      "format-alt": "{time} {icon}",
-      "format-icons": ["", "", "", "", "", "", "", "", "", "", ""]
-    },
-
-    "pulseaudio": {
-      "format": "{icon} {volume} {format_source}",
-      "format-muted": "  {format_source}",
-      "format-source": " ",
-      "format-source-muted": " ",
-      "on-click": "wpctl set-mute @DEFAULT_SINK@ toggle",
-      "on-click-right": "pavucontrol",
-      "on-scroll-up": "pamixer -i 5",
-      "on-scroll-down": "pamixer -d 5",
-      "scroll-step": 5,
-      "format-icons": {
-        "headphone": "",
-        "hands-free": "",
-        "headset": "",
-        "phone": "",
-        "portable": "",
-        "car": "",
-        "default": ["", "", ""]
-      }
-    }
-
-    // "group/system": {
-    //   "orientation": "horizontal",
-    //   "drawer": {
-    //     "transition-duration": 500,
-    //     "children-class": "hidden",
-    //     "transition-left-to-right": false
-    //   },
-    //   "modules": ["temperature", "disk", "memory", "cpu"]
-    // }
+    "include": [
+      "~/.config/waybar/modules.jsonc"
+    ]
   }
 ]
